--- a/EclipseStm32.ioc
+++ b/EclipseStm32.ioc
@@ -33,27 +33,29 @@ Mcu.IPNb=11
 Mcu.Name=STM32F303C(B-C)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13
-Mcu.Pin1=PA0
-Mcu.Pin10=PA11
-Mcu.Pin11=PA12
-Mcu.Pin12=PA13
-Mcu.Pin13=PA14
-Mcu.Pin14=PB4
-Mcu.Pin15=PB5
-Mcu.Pin16=PB6
-Mcu.Pin17=PB7
-Mcu.Pin18=VP_SYS_VS_Systick
-Mcu.Pin19=VP_TIM1_VS_ClockSourceITR
-Mcu.Pin2=PA4
-Mcu.Pin20=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
-Mcu.Pin3=PA7
-Mcu.Pin4=PB0
-Mcu.Pin5=PB1
-Mcu.Pin6=PB11
-Mcu.Pin7=PB14
-Mcu.Pin8=PA9
-Mcu.Pin9=PA10
-Mcu.PinsNb=21
+Mcu.Pin1=PF0-OSC_IN
+Mcu.Pin10=PA9
+Mcu.Pin11=PA10
+Mcu.Pin12=PA11
+Mcu.Pin13=PA12
+Mcu.Pin14=PA13
+Mcu.Pin15=PA14
+Mcu.Pin16=PB4
+Mcu.Pin17=PB5
+Mcu.Pin18=PB6
+Mcu.Pin19=PB7
+Mcu.Pin2=PF1-OSC_OUT
+Mcu.Pin20=VP_SYS_VS_Systick
+Mcu.Pin21=VP_TIM1_VS_ClockSourceITR
+Mcu.Pin22=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin3=PA0
+Mcu.Pin4=PA4
+Mcu.Pin5=PA7
+Mcu.Pin6=PB0
+Mcu.Pin7=PB1
+Mcu.Pin8=PB11
+Mcu.Pin9=PB14
+Mcu.PinsNb=23
 Mcu.UserConstants=
 Mcu.UserName=STM32F303CBTx
 MxCube.Version=4.19.0
@@ -130,6 +132,10 @@ PCC.Seq0=0
 PCC.Series=STM32F3
 PCC.Temperature=25
 PCC.Vdd=3.6
+PF0-OSC_IN.Mode=HSE-External-Oscillator
+PF0-OSC_IN.Signal=RCC_OSC_IN
+PF1-OSC_OUT.Mode=HSE-External-Oscillator
+PF1-OSC_OUT.Signal=RCC_OSC_OUT
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=2
@@ -155,35 +161,43 @@ ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=C\:\\Users\\klemen\\Dropbox\\Voga\\EclipseStm32
 ProjectManager.UnderRoot=true
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-SystemClock_Config-RCC-false-HAL,3-MX_ADC1_Init-ADC1-false-HAL,4-MX_TIM1_Init-TIM1-false-HAL,5-MX_TIM8_Init-TIM8-false-HAL,6-MX_ADC3_Init-ADC3-false-HAL,7-MX_TIM4_Init-TIM4-false-HAL,8-MX_TIM3_Init-TIM3-false-HAL,9-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL
-RCC.ADC12outputFreq_Value=16000000
-RCC.ADC34outputFreq_Value=16000000
-RCC.AHBFreq_Value=8000000
-RCC.APB1Freq_Value=8000000
-RCC.APB2Freq_Value=8000000
-RCC.CortexFreq_Value=8000000
+RCC.ADC12outputFreq_Value=48000000
+RCC.ADC34outputFreq_Value=48000000
+RCC.AHBFreq_Value=48000000
+RCC.APB1CLKDivider=RCC_HCLK_DIV2
+RCC.APB1Freq_Value=24000000
+RCC.APB1TimFreq_Value=48000000
+RCC.APB2Freq_Value=48000000
+RCC.APB2TimFreq_Value=48000000
+RCC.CortexFreq_Value=48000000
+RCC.FCLKCortexFreq_Value=48000000
 RCC.FamilyName=M
+RCC.HCLKFreq_Value=48000000
 RCC.HSEPLLFreq_Value=8000000
 RCC.HSE_VALUE=8000000
 RCC.HSIPLLFreq_Value=4000000
+RCC.HSIState=RCC_HSI_ON
 RCC.HSI_VALUE=8000000
 RCC.I2C1Freq_Value=8000000
 RCC.I2C2Freq_Value=8000000
-RCC.IPParameters=ADC12outputFreq_Value,ADC34outputFreq_Value,AHBFreq_Value,APB1Freq_Value,APB2Freq_Value,CortexFreq_Value,FamilyName,HSEPLLFreq_Value,HSE_VALUE,HSIPLLFreq_Value,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,LSE_VALUE,LSI_VALUE,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,PLLSourceVirtualString,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,TIM2Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOOutput2Freq_Value
-RCC.LSE_VALUE=32768
+RCC.IPParameters=ADC12outputFreq_Value,ADC34outputFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSEPLLFreq_Value,HSE_VALUE,HSIPLLFreq_Value,HSIState,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,LSI_VALUE,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSourceVirtual,TIM1Freq_Value,TIM2Freq_Value,TIM8Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOOutput2Freq_Value
 RCC.LSI_VALUE=40000
-RCC.PLLCLKFreq_Value=16000000
-RCC.PLLMCOFreq_Value=8000000
-RCC.PLLMUL=RCC_PLL_MUL4
-RCC.PLLSourceVirtualString=RCC_PLLSOURCE_HSI
+RCC.MCOFreq_Value=48000000
+RCC.PLLCLKFreq_Value=48000000
+RCC.PLLMCOFreq_Value=24000000
+RCC.PLLMUL=RCC_PLL_MUL6
 RCC.RTCFreq_Value=40000
 RCC.RTCHSEDivFreq_Value=250000
-RCC.SYSCLKFreq_VALUE=8000000
-RCC.TIM2Freq_Value=8000000
-RCC.USART1Freq_Value=8000000
-RCC.USART2Freq_Value=8000000
-RCC.USART3Freq_Value=8000000
-RCC.USBFreq_Value=16000000
-RCC.VCOOutput2Freq_Value=4000000
+RCC.SYSCLKFreq_VALUE=48000000
+RCC.SYSCLKSourceVirtual=RCC_SYSCLKSOURCE_PLLCLK
+RCC.TIM1Freq_Value=48000000
+RCC.TIM2Freq_Value=48000000
+RCC.TIM8Freq_Value=48000000
+RCC.USART1Freq_Value=48000000
+RCC.USART2Freq_Value=24000000
+RCC.USART3Freq_Value=24000000
+RCC.USBFreq_Value=48000000
+RCC.VCOOutput2Freq_Value=8000000
 SH.S_TIM3_CH1.0=TIM3_CH1,Encoder_Interface
 SH.S_TIM3_CH1.ConfNb=1
 SH.S_TIM3_CH2.0=TIM3_CH2,Encoder_Interface
