--- a/EclipseStm32.ioc
+++ b/EclipseStm32.ioc
@@ -1,11 +1,30 @@
 #MicroXplorer Configuration settings - do not modify
 ADC1.Channel-29\#ChannelRegularConversion=ADC_CHANNEL_1
-ADC1.IPParameters=Rank-29\#ChannelRegularConversion,Channel-29\#ChannelRegularConversion,SamplingTime-29\#ChannelRegularConversion,OffsetNumber-29\#ChannelRegularConversion,Offset-29\#ChannelRegularConversion,NbrOfConversionFlag,master
+ADC1.ClockPrescaler=ADC_CLOCK_ASYNC_DIV1
+ADC1.ContinuousConvMode=DISABLE
+ADC1.DMAContinuousRequests=DISABLE
+ADC1.DataAlign=ADC_DATAALIGN_RIGHT
+ADC1.DiscontinuousConvMode=DISABLE
+ADC1.EOCSelection=ADC_EOC_SINGLE_CONV
+ADC1.EnableAnalogWatchDog1=false
+ADC1.EnableAnalogWatchDog2=false
+ADC1.EnableAnalogWatchDog3=false
+ADC1.EnableInjectedConversion=ENABLE
+ADC1.EnableRegularConversion=ENABLE
+ADC1.ExternalTrigConv=ADC_SOFTWARE_START
+ADC1.ExternalTrigConvEdge=ADC_EXTERNALTRIGCONVEDGE_NONE
+ADC1.IPParameters=Rank-29\#ChannelRegularConversion,Channel-29\#ChannelRegularConversion,SamplingTime-29\#ChannelRegularConversion,OffsetNumber-29\#ChannelRegularConversion,Offset-29\#ChannelRegularConversion,NbrOfConversionFlag,master,ClockPrescaler,Resolution,DataAlign,ScanConvMode,ContinuousConvMode,DiscontinuousConvMode,DMAContinuousRequests,EOCSelection,Overrun,LowPowerAutoWait,EnableRegularConversion,NbrOfConversion,ExternalTrigConv,ExternalTrigConvEdge,EnableInjectedConversion,InjNumberOfConversion,EnableAnalogWatchDog1,EnableAnalogWatchDog2,EnableAnalogWatchDog3
+ADC1.InjNumberOfConversion=0
+ADC1.LowPowerAutoWait=DISABLE
+ADC1.NbrOfConversion=1
 ADC1.NbrOfConversionFlag=1
 ADC1.Offset-29\#ChannelRegularConversion=0
 ADC1.OffsetNumber-29\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.Overrun=ADC_OVR_DATA_OVERWRITTEN
 ADC1.Rank-29\#ChannelRegularConversion=1
+ADC1.Resolution=ADC_RESOLUTION_12B
 ADC1.SamplingTime-29\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.ScanConvMode=ADC_SCAN_DISABLE
 ADC1.master=1
 ADC3.Channel-11\#ChannelRegularConversion=ADC_CHANNEL_1
 ADC3.IPParameters=Rank-11\#ChannelRegularConversion,Channel-11\#ChannelRegularConversion,SamplingTime-11\#ChannelRegularConversion,OffsetNumber-11\#ChannelRegularConversion,Offset-11\#ChannelRegularConversion,NbrOfConversionFlag,master
@@ -33,35 +52,38 @@ Mcu.IPNb=11
 Mcu.Name=STM32F303C(B-C)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13
-Mcu.Pin1=PF0-OSC_IN
-Mcu.Pin10=PA9
-Mcu.Pin11=PA10
-Mcu.Pin12=PA11
-Mcu.Pin13=PA12
-Mcu.Pin14=PA13
-Mcu.Pin15=PA14
-Mcu.Pin16=PB4
-Mcu.Pin17=PB5
+Mcu.Pin1=PC14-OSC32_IN
+Mcu.Pin10=PB11
+Mcu.Pin11=PB14
+Mcu.Pin12=PA9
+Mcu.Pin13=PA10
+Mcu.Pin14=PA11
+Mcu.Pin15=PA12
+Mcu.Pin16=PA13
+Mcu.Pin17=PA14
 Mcu.Pin18=PB6
 Mcu.Pin19=PB7
-Mcu.Pin2=PF1-OSC_OUT
+Mcu.Pin2=PF0-OSC_IN
 Mcu.Pin20=VP_SYS_VS_Systick
-Mcu.Pin21=VP_TIM1_VS_ClockSourceITR
-Mcu.Pin22=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
-Mcu.Pin3=PA0
-Mcu.Pin4=PA4
-Mcu.Pin5=PA7
-Mcu.Pin6=PB0
-Mcu.Pin7=PB1
-Mcu.Pin8=PB11
-Mcu.Pin9=PB14
-Mcu.PinsNb=23
+Mcu.Pin21=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin22=VP_TIM8_VS_ClockSourceINT
+Mcu.Pin23=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin3=PF1-OSC_OUT
+Mcu.Pin4=PA0
+Mcu.Pin5=PA4
+Mcu.Pin6=PA6
+Mcu.Pin7=PA7
+Mcu.Pin8=PB0
+Mcu.Pin9=PB1
+Mcu.PinsNb=24
 Mcu.UserConstants=
 Mcu.UserName=STM32F303CBTx
 MxCube.Version=4.19.0
 MxDb.Version=DB.4.0.190
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true
+NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:false\:true
+NVIC.EXTI9_5_IRQn=true\:0\:0\:false\:true\:true\:1
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true
@@ -73,9 +95,12 @@ NVIC.USB_LP_CAN_RX0_IRQn=true\:0\:0\:false\:false\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true
 PA0.Mode=IN1-Single-Ended
 PA0.Signal=ADC1_IN1
-PA10.GPIOParameters=GPIO_Label
-PA10.GPIO_Label=BUTTON2
-PA10.Signal=GPIO_Input
+PA10.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+PA10.GPIO_Label=Button1
+PA10.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PA10.GPIO_PuPd=GPIO_PULLUP
+PA10.Locked=true
+PA10.Signal=GPXTI10
 PA11.Mode=Device
 PA11.Signal=USB_DM
 PA12.Mode=Device
@@ -85,18 +110,25 @@ PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
 PA4.GPIOParameters=GPIO_Label
-PA4.GPIO_Label=INH1
-PA4.Signal=GPIO_Output
-PA7.GPIOParameters=GPIO_Label
+PA4.GPIO_Label=ENC4
+PA4.Signal=S_TIM3_CH2
+PA6.GPIOParameters=GPIO_Label
+PA6.GPIO_Label=ENC3
+PA6.Signal=S_TIM3_CH1
+PA7.GPIOParameters=GPIO_ModeDefaultPP,GPIO_Label
 PA7.GPIO_Label=PWM3
-PA7.Mode=Output Compare1 CH1N
+PA7.GPIO_ModeDefaultPP=GPIO_MODE_AF_PP
+PA7.Mode=PWM Generation1 CH1N
 PA7.Signal=TIM8_CH1N
-PA9.GPIOParameters=GPIO_Label
-PA9.GPIO_Label=BUTTON1
-PA9.Signal=GPIO_Input
+PA9.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+PA9.GPIO_Label=Button1
+PA9.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PA9.GPIO_PuPd=GPIO_PULLUP
+PA9.Locked=true
+PA9.Signal=GPXTI9
 PB0.GPIOParameters=GPIO_Label
 PB0.GPIO_Label=PWM4
-PB0.Mode=Output Compare2 CH2N
+PB0.Mode=PWM Generation2 CH2N
 PB0.Signal=TIM8_CH2N
 PB1.Mode=IN1-Single-Ended
 PB1.Signal=ADC3_IN1
@@ -105,14 +137,8 @@ PB11.GPIO_Label=INH2
 PB11.Signal=GPIO_Output
 PB14.GPIOParameters=GPIO_Label
 PB14.GPIO_Label=PWM2
-PB14.Mode=Output Compare2 CH2N
+PB14.Mode=PWM Generation2 CH2N
 PB14.Signal=TIM1_CH2N
-PB4.GPIOParameters=GPIO_Label
-PB4.GPIO_Label=ENC3
-PB4.Signal=S_TIM3_CH1
-PB5.GPIOParameters=GPIO_Label
-PB5.GPIO_Label=ENC4
-PB5.Signal=S_TIM3_CH2
 PB6.GPIOParameters=GPIO_Label
 PB6.GPIO_Label=ENC2
 PB6.Signal=S_TIM4_CH1
@@ -123,6 +149,9 @@ PC13.GPIOParameters=GPIO_Label
 PC13.GPIO_Label=PWM1
 PC13.Mode=PWM Generation1 CH1N
 PC13.Signal=TIM1_CH1N
+PC14-OSC32_IN.GPIOParameters=GPIO_Label
+PC14-OSC32_IN.GPIO_Label=INH1
+PC14-OSC32_IN.Signal=GPIO_Output
 PCC.Checker=false
 PCC.Line=STM32F303
 PCC.MCU=STM32F303C(B-C)Tx
@@ -180,7 +209,8 @@ RCC.HSIState=RCC_HSI_ON
 RCC.HSI_VALUE=8000000
 RCC.I2C1Freq_Value=8000000
 RCC.I2C2Freq_Value=8000000
-RCC.IPParameters=ADC12outputFreq_Value,ADC34outputFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSEPLLFreq_Value,HSE_VALUE,HSIPLLFreq_Value,HSIState,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,LSI_VALUE,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSourceVirtual,TIM1Freq_Value,TIM2Freq_Value,TIM8Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOOutput2Freq_Value
+RCC.IPParameters=ADC12outputFreq_Value,ADC34outputFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSEPLLFreq_Value,HSE_VALUE,HSIPLLFreq_Value,HSIState,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,LSE_VALUE,LSI_VALUE,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSourceVirtual,TIM1Freq_Value,TIM2Freq_Value,TIM8Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOOutput2Freq_Value
+RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=40000
 RCC.MCOFreq_Value=48000000
 RCC.PLLCLKFreq_Value=48000000
@@ -198,6 +228,10 @@ RCC.USART2Freq_Value=24000000
 RCC.USART3Freq_Value=24000000
 RCC.USBFreq_Value=48000000
 RCC.VCOOutput2Freq_Value=8000000
+SH.GPXTI10.0=GPIO_EXTI10
+SH.GPXTI10.ConfNb=1
+SH.GPXTI9.0=GPIO_EXTI9
+SH.GPXTI9.ConfNb=1
 SH.S_TIM3_CH1.0=TIM3_CH1,Encoder_Interface
 SH.S_TIM3_CH1.ConfNb=1
 SH.S_TIM3_CH2.0=TIM3_CH2,Encoder_Interface
@@ -206,17 +240,35 @@ SH.S_TIM4_CH1.0=TIM4_CH1,Encoder_Interface
 SH.S_TIM4_CH1.ConfNb=1
 SH.S_TIM4_CH2.0=TIM4_CH2,Encoder_Interface
 SH.S_TIM4_CH2.ConfNb=1
-TIM1.Channel-Output\ Compare2\ CH2N=TIM_CHANNEL_2
-TIM1.IPParameters=Channel-Output Compare2 CH2N
-TIM8.Channel-Output\ Compare2\ CH2N=TIM_CHANNEL_2
-TIM8.IPParameters=Channel-Output Compare2 CH2N
+TIM1.Channel-PWM\ Generation2\ CH2N=TIM_CHANNEL_2
+TIM1.CounterMode=TIM_COUNTERMODE_CENTERALIGNED1
+TIM1.IPParameters=Channel-PWM Generation2 CH2N,OCNIdleState_2,OCNIdleState_1,Pulse-PWM Generation1 CH1N,Pulse-PWM Generation2 CH2N,Period,OCFastMode_PWM-PWM Generation1 CH1N,OCFastMode_PWM-PWM Generation2 CH2N,CounterMode
+TIM1.OCFastMode_PWM-PWM\ Generation1\ CH1N=TIM_OCFAST_ENABLE
+TIM1.OCFastMode_PWM-PWM\ Generation2\ CH2N=TIM_OCFAST_ENABLE
+TIM1.OCNIdleState_1=TIM_OCNIDLESTATE_SET
+TIM1.OCNIdleState_2=TIM_OCNIDLESTATE_SET
+TIM1.Period=2400
+TIM1.Pulse-PWM\ Generation1\ CH1N=10
+TIM1.Pulse-PWM\ Generation2\ CH2N=10
+TIM8.Channel-PWM\ Generation2\ CH2N=TIM_CHANNEL_2
+TIM8.CounterMode=TIM_COUNTERMODE_CENTERALIGNED1
+TIM8.IPParameters=Channel-PWM Generation2 CH2N,OCNIdleState_1,OCNIdleState_2,Pulse-PWM Generation1 CH1N,Pulse-PWM Generation2 CH2N,Period,OCFastMode_PWM-PWM Generation2 CH2N,OCFastMode_PWM-PWM Generation1 CH1N,CounterMode
+TIM8.OCFastMode_PWM-PWM\ Generation1\ CH1N=TIM_OCFAST_ENABLE
+TIM8.OCFastMode_PWM-PWM\ Generation2\ CH2N=TIM_OCFAST_ENABLE
+TIM8.OCNIdleState_1=TIM_OCNIDLESTATE_SET
+TIM8.OCNIdleState_2=TIM_OCNIDLESTATE_SET
+TIM8.Period=2400
+TIM8.Pulse-PWM\ Generation1\ CH1N=10
+TIM8.Pulse-PWM\ Generation2\ CH2N=10
 USB_DEVICE.CLASS_NAME_FS=CDC
 USB_DEVICE.IPParameters=VirtualModeFS,CLASS_NAME_FS
 USB_DEVICE.VirtualModeFS=Cdc_FS
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
-VP_TIM1_VS_ClockSourceITR.Mode=TriggerSource_ITR0
-VP_TIM1_VS_ClockSourceITR.Signal=TIM1_VS_ClockSourceITR
+VP_TIM1_VS_ClockSourceINT.Mode=Internal
+VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
+VP_TIM8_VS_ClockSourceINT.Mode=Internal
+VP_TIM8_VS_ClockSourceINT.Signal=TIM8_VS_ClockSourceINT
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_FS
 board=EclipseStm32
