modified:   EclipseStm32.ioc 	modified:   Inc/main.h 	modified:   Src/main.c

--- a/EclipseStm32.ioc
+++ b/EclipseStm32.ioc
@@ -27,7 +27,8 @@ ADC1.SamplingTime-29\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
 ADC1.ScanConvMode=ADC_SCAN_DISABLE
 ADC1.master=1
 ADC3.Channel-11\#ChannelRegularConversion=ADC_CHANNEL_1
-ADC3.IPParameters=Rank-11\#ChannelRegularConversion,Channel-11\#ChannelRegularConversion,SamplingTime-11\#ChannelRegularConversion,OffsetNumber-11\#ChannelRegularConversion,Offset-11\#ChannelRegularConversion,NbrOfConversionFlag,master
+ADC3.ContinuousConvMode=ENABLE
+ADC3.IPParameters=Rank-11\#ChannelRegularConversion,Channel-11\#ChannelRegularConversion,SamplingTime-11\#ChannelRegularConversion,OffsetNumber-11\#ChannelRegularConversion,Offset-11\#ChannelRegularConversion,NbrOfConversionFlag,master,ContinuousConvMode
 ADC3.NbrOfConversionFlag=1
 ADC3.Offset-11\#ChannelRegularConversion=0
 ADC3.OffsetNumber-11\#ChannelRegularConversion=ADC_OFFSET_NONE
@@ -96,7 +97,7 @@ NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true
 PA0.Mode=IN1-Single-Ended
 PA0.Signal=ADC1_IN1
 PA10.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
-PA10.GPIO_Label=Button1
+PA10.GPIO_Label=Button2
 PA10.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
 PA10.GPIO_PuPd=GPIO_PULLUP
 PA10.Locked=true
