--- a/EclipseStm32.ioc
+++ b/EclipseStm32.ioc
@@ -1,11 +1,11 @@
 #MicroXplorer Configuration settings - do not modify
 ADC1.Channel-29\#ChannelRegularConversion=ADC_CHANNEL_1
 ADC1.ClockPrescaler=ADC_CLOCK_ASYNC_DIV1
-ADC1.ContinuousConvMode=DISABLE
-ADC1.DMAContinuousRequests=DISABLE
+ADC1.ContinuousConvMode=ENABLE
+ADC1.DMAContinuousRequests=ENABLE
 ADC1.DataAlign=ADC_DATAALIGN_RIGHT
 ADC1.DiscontinuousConvMode=DISABLE
-ADC1.EOCSelection=ADC_EOC_SINGLE_CONV
+ADC1.EOCSelection=ADC_EOC_SINGLE_SEQ_CONV
 ADC1.EnableAnalogWatchDog1=false
 ADC1.EnableAnalogWatchDog2=false
 ADC1.EnableAnalogWatchDog3=false
@@ -13,7 +13,7 @@ ADC1.EnableInjectedConversion=ENABLE
 ADC1.EnableRegularConversion=ENABLE
 ADC1.ExternalTrigConv=ADC_SOFTWARE_START
 ADC1.ExternalTrigConvEdge=ADC_EXTERNALTRIGCONVEDGE_NONE
-ADC1.IPParameters=Rank-29\#ChannelRegularConversion,Channel-29\#ChannelRegularConversion,SamplingTime-29\#ChannelRegularConversion,OffsetNumber-29\#ChannelRegularConversion,Offset-29\#ChannelRegularConversion,NbrOfConversionFlag,master,ClockPrescaler,Resolution,DataAlign,ScanConvMode,ContinuousConvMode,DiscontinuousConvMode,DMAContinuousRequests,EOCSelection,Overrun,LowPowerAutoWait,EnableRegularConversion,NbrOfConversion,ExternalTrigConv,ExternalTrigConvEdge,EnableInjectedConversion,InjNumberOfConversion,EnableAnalogWatchDog1,EnableAnalogWatchDog2,EnableAnalogWatchDog3
+ADC1.IPParameters=Rank-29\#ChannelRegularConversion,Channel-29\#ChannelRegularConversion,SamplingTime-29\#ChannelRegularConversion,OffsetNumber-29\#ChannelRegularConversion,Offset-29\#ChannelRegularConversion,NbrOfConversionFlag,ClockPrescaler,Resolution,DataAlign,ScanConvMode,ContinuousConvMode,DiscontinuousConvMode,DMAContinuousRequests,EOCSelection,Overrun,LowPowerAutoWait,EnableRegularConversion,NbrOfConversion,ExternalTrigConv,ExternalTrigConvEdge,EnableInjectedConversion,InjNumberOfConversion,EnableAnalogWatchDog1,EnableAnalogWatchDog2,EnableAnalogWatchDog3,master
 ADC1.InjNumberOfConversion=0
 ADC1.LowPowerAutoWait=DISABLE
 ADC1.NbrOfConversion=1
@@ -26,42 +26,65 @@ ADC1.Resolution=ADC_RESOLUTION_12B
 ADC1.SamplingTime-29\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
 ADC1.ScanConvMode=ADC_SCAN_DISABLE
 ADC1.master=1
-ADC3.Channel-11\#ChannelRegularConversion=ADC_CHANNEL_1
+ADC3.Channel-21\#ChannelRegularConversion=ADC_CHANNEL_1
 ADC3.ContinuousConvMode=ENABLE
-ADC3.IPParameters=Rank-11\#ChannelRegularConversion,Channel-11\#ChannelRegularConversion,SamplingTime-11\#ChannelRegularConversion,OffsetNumber-11\#ChannelRegularConversion,Offset-11\#ChannelRegularConversion,NbrOfConversionFlag,master,ContinuousConvMode
+ADC3.DMAContinuousRequests=ENABLE
+ADC3.IPParameters=Rank-21\#ChannelRegularConversion,Channel-21\#ChannelRegularConversion,SamplingTime-21\#ChannelRegularConversion,OffsetNumber-21\#ChannelRegularConversion,Offset-21\#ChannelRegularConversion,NbrOfConversionFlag,master,ContinuousConvMode,DMAContinuousRequests
 ADC3.NbrOfConversionFlag=1
-ADC3.Offset-11\#ChannelRegularConversion=0
-ADC3.OffsetNumber-11\#ChannelRegularConversion=ADC_OFFSET_NONE
-ADC3.Rank-11\#ChannelRegularConversion=1
-ADC3.SamplingTime-11\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC3.Offset-21\#ChannelRegularConversion=0
+ADC3.OffsetNumber-21\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC3.Rank-21\#ChannelRegularConversion=1
+ADC3.SamplingTime-21\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
 ADC3.master=1
+Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.ADC1.0.Instance=DMA1_Channel1
+Dma.ADC1.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.ADC1.0.MemInc=DMA_MINC_ENABLE
+Dma.ADC1.0.Mode=DMA_CIRCULAR
+Dma.ADC1.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.ADC1.0.PeriphInc=DMA_PINC_DISABLE
+Dma.ADC1.0.Priority=DMA_PRIORITY_LOW
+Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.ADC3.1.Direction=DMA_PERIPH_TO_MEMORY
+Dma.ADC3.1.Instance=DMA2_Channel5
+Dma.ADC3.1.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.ADC3.1.MemInc=DMA_MINC_ENABLE
+Dma.ADC3.1.Mode=DMA_CIRCULAR
+Dma.ADC3.1.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.ADC3.1.PeriphInc=DMA_PINC_DISABLE
+Dma.ADC3.1.Priority=DMA_PRIORITY_LOW
+Dma.ADC3.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.Request0=ADC1
+Dma.Request1=ADC3
+Dma.RequestsNb=2
 File.Version=6
 KeepUserPlacement=false
 Mcu.Family=STM32F3
 Mcu.IP0=ADC1
 Mcu.IP1=ADC3
-Mcu.IP10=USB_DEVICE
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SYS
-Mcu.IP5=TIM1
-Mcu.IP6=TIM3
-Mcu.IP7=TIM4
-Mcu.IP8=TIM8
-Mcu.IP9=USB
-Mcu.IPNb=11
+Mcu.IP10=USB
+Mcu.IP11=USB_DEVICE
+Mcu.IP2=DMA
+Mcu.IP3=NVIC
+Mcu.IP4=RCC
+Mcu.IP5=SYS
+Mcu.IP6=TIM1
+Mcu.IP7=TIM3
+Mcu.IP8=TIM4
+Mcu.IP9=TIM8
+Mcu.IPNb=12
 Mcu.Name=STM32F303C(B-C)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PB11
-Mcu.Pin11=PB14
-Mcu.Pin12=PA9
-Mcu.Pin13=PA10
-Mcu.Pin14=PA11
-Mcu.Pin15=PA12
-Mcu.Pin16=PA13
-Mcu.Pin17=PA14
+Mcu.Pin10=PA9
+Mcu.Pin11=PA10
+Mcu.Pin12=PA11
+Mcu.Pin13=PA12
+Mcu.Pin14=PA13
+Mcu.Pin15=PA14
+Mcu.Pin16=PB4
+Mcu.Pin17=PB5
 Mcu.Pin18=PB6
 Mcu.Pin19=PB7
 Mcu.Pin2=PF0-OSC_IN
@@ -72,19 +95,21 @@ Mcu.Pin23=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin3=PF1-OSC_OUT
 Mcu.Pin4=PA0
 Mcu.Pin5=PA4
-Mcu.Pin6=PA6
-Mcu.Pin7=PA7
-Mcu.Pin8=PB0
-Mcu.Pin9=PB1
+Mcu.Pin6=PA7
+Mcu.Pin7=PB0
+Mcu.Pin8=PB1
+Mcu.Pin9=PB14
 Mcu.PinsNb=24
 Mcu.UserConstants=
 Mcu.UserName=STM32F303CBTx
 MxCube.Version=4.19.0
 MxDb.Version=DB.4.0.190
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true
+NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true
+NVIC.DMA2_Channel5_IRQn=true\:0\:0\:false\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true
-NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:false\:true
-NVIC.EXTI9_5_IRQn=true\:0\:0\:false\:true\:true\:1
+NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:true\:true\:4
+NVIC.EXTI9_5_IRQn=true\:0\:0\:false\:true\:true\:3
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true
@@ -110,12 +135,11 @@ PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
-PA4.GPIOParameters=GPIO_Label
-PA4.GPIO_Label=ENC4
-PA4.Signal=S_TIM3_CH2
-PA6.GPIOParameters=GPIO_Label
-PA6.GPIO_Label=ENC3
-PA6.Signal=S_TIM3_CH1
+PA4.GPIOParameters=PinState,GPIO_Label
+PA4.GPIO_Label=INH1
+PA4.Locked=true
+PA4.PinState=GPIO_PIN_SET
+PA4.Signal=GPIO_Output
 PA7.GPIOParameters=GPIO_ModeDefaultPP,GPIO_Label
 PA7.GPIO_Label=PWM3
 PA7.GPIO_ModeDefaultPP=GPIO_MODE_AF_PP
@@ -133,13 +157,18 @@ PB0.Mode=PWM Generation2 CH2N
 PB0.Signal=TIM8_CH2N
 PB1.Mode=IN1-Single-Ended
 PB1.Signal=ADC3_IN1
-PB11.GPIOParameters=GPIO_Label
-PB11.GPIO_Label=INH2
-PB11.Signal=GPIO_Output
 PB14.GPIOParameters=GPIO_Label
 PB14.GPIO_Label=PWM2
 PB14.Mode=PWM Generation2 CH2N
 PB14.Signal=TIM1_CH2N
+PB4.GPIOParameters=GPIO_Label
+PB4.GPIO_Label=ENC3
+PB4.Locked=true
+PB4.Signal=S_TIM3_CH1
+PB5.GPIOParameters=GPIO_Label
+PB5.GPIO_Label=ENC4
+PB5.Locked=true
+PB5.Signal=S_TIM3_CH2
 PB6.GPIOParameters=GPIO_Label
 PB6.GPIO_Label=ENC2
 PB6.Signal=S_TIM4_CH1
@@ -150,8 +179,9 @@ PC13.GPIOParameters=GPIO_Label
 PC13.GPIO_Label=PWM1
 PC13.Mode=PWM Generation1 CH1N
 PC13.Signal=TIM1_CH1N
-PC14-OSC32_IN.GPIOParameters=GPIO_Label
-PC14-OSC32_IN.GPIO_Label=INH1
+PC14-OSC32_IN.GPIOParameters=GPIO_Label,PinState
+PC14-OSC32_IN.GPIO_Label=INH2
+PC14-OSC32_IN.PinState=GPIO_PIN_SET
 PC14-OSC32_IN.Signal=GPIO_Output
 PCC.Checker=false
 PCC.Line=STM32F303
@@ -190,7 +220,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=C\:\\Users\\klemen\\Dropbox\\Voga\\EclipseStm32
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-SystemClock_Config-RCC-false-HAL,3-MX_ADC1_Init-ADC1-false-HAL,4-MX_TIM1_Init-TIM1-false-HAL,5-MX_TIM8_Init-TIM8-false-HAL,6-MX_ADC3_Init-ADC3-false-HAL,7-MX_TIM4_Init-TIM4-false-HAL,8-MX_TIM3_Init-TIM3-false-HAL,9-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-MX_DMA_Init-DMA-false-HAL,3-SystemClock_Config-RCC-false-HAL,4-MX_ADC1_Init-ADC1-false-HAL,5-MX_TIM1_Init-TIM1-false-HAL,6-MX_TIM8_Init-TIM8-false-HAL,7-MX_ADC3_Init-ADC3-false-HAL,8-MX_TIM4_Init-TIM4-false-HAL,9-MX_TIM3_Init-TIM3-false-HAL,10-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL
 RCC.ADC12outputFreq_Value=48000000
 RCC.ADC34outputFreq_Value=48000000
 RCC.AHBFreq_Value=48000000
