--- a/EclipseStm32.ioc
+++ b/EclipseStm32.ioc
@@ -57,21 +57,24 @@ Mcu.Pin0=PC13
 Mcu.Pin1=PF0-OSC_IN
 Mcu.Pin10=PB11
 Mcu.Pin11=PB14
-Mcu.Pin12=PA9
-Mcu.Pin13=PA10
-Mcu.Pin14=PA11
-Mcu.Pin15=PA12
-Mcu.Pin16=PA13
-Mcu.Pin17=PA14
-Mcu.Pin18=PB4
-Mcu.Pin19=PB5
+Mcu.Pin12=PA8
+Mcu.Pin13=PA9
+Mcu.Pin14=PA10
+Mcu.Pin15=PA11
+Mcu.Pin16=PA12
+Mcu.Pin17=PA13
+Mcu.Pin18=PA14
+Mcu.Pin19=PB4
 Mcu.Pin2=PF1-OSC_OUT
-Mcu.Pin20=PB6
-Mcu.Pin21=PB7
-Mcu.Pin22=VP_SYS_VS_Systick
-Mcu.Pin23=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin24=VP_TIM8_VS_ClockSourceINT
-Mcu.Pin25=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin20=PB5
+Mcu.Pin21=PB6
+Mcu.Pin22=PB7
+Mcu.Pin23=PB8
+Mcu.Pin24=PB9
+Mcu.Pin25=VP_SYS_VS_Systick
+Mcu.Pin26=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin27=VP_TIM8_VS_ClockSourceINT
+Mcu.Pin28=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin3=PA0
 Mcu.Pin4=PA4
 Mcu.Pin5=PA5
@@ -79,7 +82,7 @@ Mcu.Pin6=PA6
 Mcu.Pin7=PA7
 Mcu.Pin8=PB0
 Mcu.Pin9=PB1
-Mcu.PinsNb=26
+Mcu.PinsNb=29
 Mcu.UserConstants=
 Mcu.UserName=STM32F303CBTx
 MxCube.Version=4.19.0
@@ -116,16 +119,16 @@ PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
 PA4.GPIOParameters=PinState,GPIO_Label
-PA4.GPIO_Label=INH1
+PA4.GPIO_Label=INH2
 PA4.Locked=true
 PA4.PinState=GPIO_PIN_SET
 PA4.Signal=GPIO_Output
 PA5.GPIOParameters=GPIO_Label
-PA5.GPIO_Label=OCDA
+PA5.GPIO_Label=OCDB
 PA5.Locked=true
 PA5.Signal=GPIO_Input
 PA6.GPIOParameters=GPIO_Label
-PA6.GPIO_Label=OCDB
+PA6.GPIO_Label=OCDA
 PA6.Locked=true
 PA6.Signal=GPIO_Input
 PA7.GPIOParameters=GPIO_ModeDefaultPP,GPIO_Label
@@ -133,6 +136,10 @@ PA7.GPIO_Label=PWM3
 PA7.GPIO_ModeDefaultPP=GPIO_MODE_AF_PP
 PA7.Mode=PWM Generation1 CH1N
 PA7.Signal=TIM8_CH1N
+PA8.GPIOParameters=GPIO_Label
+PA8.GPIO_Label=LED
+PA8.Locked=true
+PA8.Signal=GPIO_Output
 PA9.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PA9.GPIO_Label=Button1
 PA9.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
@@ -146,7 +153,7 @@ PB0.Signal=TIM8_CH2N
 PB1.Mode=IN1-Single-Ended
 PB1.Signal=ADC3_IN1
 PB11.GPIOParameters=PinState,GPIO_Label
-PB11.GPIO_Label=INH2
+PB11.GPIO_Label=INH1
 PB11.Locked=true
 PB11.PinState=GPIO_PIN_SET
 PB11.Signal=GPIO_Output
@@ -172,6 +179,10 @@ PB7.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB7.GPIO_Label=ENC1
 PB7.GPIO_PuPd=GPIO_PULLUP
 PB7.Signal=S_TIM4_CH2
+PB8.Locked=true
+PB8.Signal=I2C1_SCL
+PB9.Locked=true
+PB9.Signal=I2C1_SDA
 PC13.GPIOParameters=GPIO_Label
 PC13.GPIO_Label=PWM1
 PC13.Mode=PWM Generation1 CH1N
