--- a/EclipseStm32.ioc
+++ b/EclipseStm32.ioc
@@ -56,25 +56,26 @@ Mcu.Package=LQFP48
 Mcu.Pin0=PC13
 Mcu.Pin1=PF0-OSC_IN
 Mcu.Pin10=PB11
-Mcu.Pin11=PB14
-Mcu.Pin12=PA8
-Mcu.Pin13=PA9
-Mcu.Pin14=PA10
-Mcu.Pin15=PA11
-Mcu.Pin16=PA12
-Mcu.Pin17=PA13
-Mcu.Pin18=PA14
-Mcu.Pin19=PB4
+Mcu.Pin11=PB13
+Mcu.Pin12=PB14
+Mcu.Pin13=PA8
+Mcu.Pin14=PA9
+Mcu.Pin15=PA10
+Mcu.Pin16=PA11
+Mcu.Pin17=PA12
+Mcu.Pin18=PA13
+Mcu.Pin19=PA14
 Mcu.Pin2=PF1-OSC_OUT
-Mcu.Pin20=PB5
-Mcu.Pin21=PB6
-Mcu.Pin22=PB7
-Mcu.Pin23=PB8
-Mcu.Pin24=PB9
-Mcu.Pin25=VP_SYS_VS_Systick
-Mcu.Pin26=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin27=VP_TIM8_VS_ClockSourceINT
-Mcu.Pin28=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin20=PB4
+Mcu.Pin21=PB5
+Mcu.Pin22=PB6
+Mcu.Pin23=PB7
+Mcu.Pin24=PB8
+Mcu.Pin25=PB9
+Mcu.Pin26=VP_SYS_VS_Systick
+Mcu.Pin27=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin28=VP_TIM8_VS_ClockSourceINT
+Mcu.Pin29=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin3=PA0
 Mcu.Pin4=PA4
 Mcu.Pin5=PA5
@@ -82,7 +83,7 @@ Mcu.Pin6=PA6
 Mcu.Pin7=PA7
 Mcu.Pin8=PB0
 Mcu.Pin9=PB1
-Mcu.PinsNb=29
+Mcu.PinsNb=30
 Mcu.UserConstants=
 Mcu.UserName=STM32F303CBTx
 MxCube.Version=4.19.0
@@ -157,6 +158,10 @@ PB11.GPIO_Label=INH1
 PB11.Locked=true
 PB11.PinState=GPIO_PIN_SET
 PB11.Signal=GPIO_Output
+PB13.GPIOParameters=GPIO_Label
+PB13.GPIO_Label=CAP_IN
+PB13.Locked=true
+PB13.Signal=GPIO_Input
 PB14.GPIOParameters=GPIO_Label
 PB14.GPIO_Label=PWM2
 PB14.Mode=PWM Generation2 CH2N
