PWM triggers ADC measurements (with DMA)

--- a/EclipseStm32.ioc
+++ b/EclipseStm32.ioc
@@ -86,23 +86,23 @@ Mcu.Pin9=PB1
 Mcu.PinsNb=30
 Mcu.UserConstants=
 Mcu.UserName=STM32F303CBTx
-MxCube.Version=4.19.0
-MxDb.Version=DB.4.0.190
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true
-NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true
-NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:true\:true\:4
-NVIC.EXTI9_5_IRQn=true\:0\:0\:false\:true\:true\:3
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true
-NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true
+MxCube.Version=4.23.0
+MxDb.Version=DB.4.0.230
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true
+NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true
+NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:true\:true\:4\:true
+NVIC.EXTI9_5_IRQn=true\:0\:0\:false\:true\:true\:3\:true
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:true
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:true
+NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true
-NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true
-NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true
-NVIC.TIM4_IRQn=true\:0\:0\:false\:false\:true
-NVIC.USB_LP_CAN_RX0_IRQn=true\:0\:0\:false\:false\:true
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true
+NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true
+NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true
+NVIC.TIM4_IRQn=true\:0\:0\:false\:false\:true\:true
+NVIC.USB_LP_CAN_RX0_IRQn=true\:0\:0\:false\:false\:true\:true
+NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true
 PA0.Mode=IN1-Single-Ended
 PA0.Signal=ADC1_IN1
 PA10.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
@@ -195,7 +195,6 @@ PC13.Signal=TIM1_CH1N
 PCC.Checker=false
 PCC.Line=STM32F303
 PCC.MCU=STM32F303C(B-C)Tx
-PCC.MXVersion=4.19.0
 PCC.PartNumber=STM32F303CBTx
 PCC.Seq0=0
 PCC.Series=STM32F3
@@ -205,16 +204,17 @@ PF0-OSC_IN.Mode=HSE-External-Oscillator
 PF0-OSC_IN.Signal=RCC_OSC_IN
 PF1-OSC_OUT.Mode=HSE-External-Oscillator
 PF1-OSC_OUT.Signal=RCC_OSC_OUT
+PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=2
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=false
-ProjectManager.CustomerFirmwarePackage=C\:/Users/klemen/STM32Cube/Repository/STM32Cube_FW_F3_V1.7.0
+ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F303CBTx
-ProjectManager.FirmwarePackage=STM32Cube FW_F3 V1.7.0
+ProjectManager.FirmwarePackage=STM32Cube FW_F3 V1.9.0
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
@@ -245,11 +245,10 @@ RCC.HCLKFreq_Value=48000000
 RCC.HSEPLLFreq_Value=8000000
 RCC.HSE_VALUE=8000000
 RCC.HSIPLLFreq_Value=4000000
-RCC.HSIState=RCC_HSI_ON
 RCC.HSI_VALUE=8000000
 RCC.I2C1Freq_Value=8000000
 RCC.I2C2Freq_Value=8000000
-RCC.IPParameters=ADC12outputFreq_Value,ADC34outputFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSEPLLFreq_Value,HSE_VALUE,HSIPLLFreq_Value,HSIState,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,LSE_VALUE,LSI_VALUE,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSourceVirtual,TIM1Freq_Value,TIM2Freq_Value,TIM8Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOOutput2Freq_Value
+RCC.IPParameters=ADC12outputFreq_Value,ADC34outputFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSEPLLFreq_Value,HSE_VALUE,HSIPLLFreq_Value,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,LSE_VALUE,LSI_VALUE,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSourceVirtual,TIM1Freq_Value,TIM2Freq_Value,TIM8Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOOutput2Freq_Value
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=40000
 RCC.MCOFreq_Value=48000000
@@ -280,9 +279,10 @@ SH.S_TIM4_CH1.0=TIM4_CH1,Encoder_Interface
 SH.S_TIM4_CH1.ConfNb=1
 SH.S_TIM4_CH2.0=TIM4_CH2,Encoder_Interface
 SH.S_TIM4_CH2.ConfNb=1
+TIM1.Channel-PWM\ Generation1\ CH1N=TIM_CHANNEL_1
 TIM1.Channel-PWM\ Generation2\ CH2N=TIM_CHANNEL_2
 TIM1.CounterMode=TIM_COUNTERMODE_CENTERALIGNED1
-TIM1.IPParameters=Channel-PWM Generation2 CH2N,OCNIdleState_2,OCNIdleState_1,Pulse-PWM Generation1 CH1N,Pulse-PWM Generation2 CH2N,Period,OCFastMode_PWM-PWM Generation1 CH1N,OCFastMode_PWM-PWM Generation2 CH2N,CounterMode
+TIM1.IPParameters=Channel-PWM Generation2 CH2N,OCNIdleState_2,OCNIdleState_1,Pulse-PWM Generation1 CH1N,Pulse-PWM Generation2 CH2N,Period,OCFastMode_PWM-PWM Generation1 CH1N,OCFastMode_PWM-PWM Generation2 CH2N,CounterMode,Channel-PWM Generation1 CH1N
 TIM1.OCFastMode_PWM-PWM\ Generation1\ CH1N=TIM_OCFAST_ENABLE
 TIM1.OCFastMode_PWM-PWM\ Generation2\ CH2N=TIM_OCFAST_ENABLE
 TIM1.OCNIdleState_1=TIM_OCNIDLESTATE_SET
@@ -304,9 +304,10 @@ TIM4.IC2Filter=5
 TIM4.IC2Polarity=TIM_ICPOLARITY_BOTHEDGE
 TIM4.IPParameters=Period,EncoderMode,IC1Polarity,IC1Filter,IC2Polarity,IC2Filter
 TIM4.Period=16
+TIM8.Channel-PWM\ Generation1\ CH1N=TIM_CHANNEL_1
 TIM8.Channel-PWM\ Generation2\ CH2N=TIM_CHANNEL_2
 TIM8.CounterMode=TIM_COUNTERMODE_CENTERALIGNED1
-TIM8.IPParameters=Channel-PWM Generation2 CH2N,OCNIdleState_1,OCNIdleState_2,Pulse-PWM Generation1 CH1N,Pulse-PWM Generation2 CH2N,Period,OCFastMode_PWM-PWM Generation2 CH2N,OCFastMode_PWM-PWM Generation1 CH1N,CounterMode
+TIM8.IPParameters=Channel-PWM Generation2 CH2N,OCNIdleState_1,OCNIdleState_2,Pulse-PWM Generation1 CH1N,Pulse-PWM Generation2 CH2N,Period,OCFastMode_PWM-PWM Generation2 CH2N,OCFastMode_PWM-PWM Generation1 CH1N,CounterMode,Channel-PWM Generation1 CH1N
 TIM8.OCFastMode_PWM-PWM\ Generation1\ CH1N=TIM_OCFAST_ENABLE
 TIM8.OCFastMode_PWM-PWM\ Generation2\ CH2N=TIM_OCFAST_ENABLE
 TIM8.OCNIdleState_1=TIM_OCNIDLESTATE_SET
@@ -315,7 +316,8 @@ TIM8.Period=2400
 TIM8.Pulse-PWM\ Generation1\ CH1N=10
 TIM8.Pulse-PWM\ Generation2\ CH2N=10
 USB_DEVICE.CLASS_NAME_FS=CDC
-USB_DEVICE.IPParameters=VirtualModeFS,CLASS_NAME_FS
+USB_DEVICE.IPParameters=VirtualModeFS,CLASS_NAME_FS,VirtualMode
+USB_DEVICE.VirtualMode=Cdc
 USB_DEVICE.VirtualModeFS=Cdc_FS
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
