latest version with 1.9 stm32 firmware cubemx lib - should allow adc and dma

--- a/EclipseStm32.ioc
+++ b/EclipseStm32.ioc
@@ -210,7 +210,7 @@ ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=2
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=false
-ProjectManager.CustomerFirmwarePackage=
+ProjectManager.CustomerFirmwarePackage=C\:/Users/klemen/STM32Cube/Repository/STM32Cube_FW_F3_V1.9.0
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F303CBTx
@@ -227,7 +227,7 @@ ProjectManager.ProjectFileName=EclipseStm32.ioc
 ProjectManager.ProjectName=EclipseStm32
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=SW4STM32
-ProjectManager.ToolChainLocation=C\:\\Users\\klemen\\Dropbox\\Voga\\EclipseStm32
+ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-SystemClock_Config-RCC-false-HAL,3-MX_ADC1_Init-ADC1-false-HAL,4-MX_TIM1_Init-TIM1-false-HAL,5-MX_TIM8_Init-TIM8-false-HAL,6-MX_ADC3_Init-ADC3-false-HAL,7-MX_TIM4_Init-TIM4-false-HAL,8-MX_TIM3_Init-TIM3-false-HAL,9-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL
 RCC.ADC12outputFreq_Value=48000000
