Finally HAL_ADC_ConvCpltCallback works, but this happens only once...

--- a/EclipseStm32.ioc
+++ b/EclipseStm32.ioc
@@ -2,7 +2,7 @@
 ADC1.Channel-29\#ChannelRegularConversion=ADC_CHANNEL_1
 ADC1.ClockPrescaler=ADC_CLOCK_ASYNC_DIV1
 ADC1.ContinuousConvMode=ENABLE
-ADC1.DMAContinuousRequests=DISABLE
+ADC1.DMAContinuousRequests=ENABLE
 ADC1.DataAlign=ADC_DATAALIGN_RIGHT
 ADC1.DiscontinuousConvMode=DISABLE
 ADC1.EOCSelection=ADC_EOC_SINGLE_SEQ_CONV
@@ -11,8 +11,8 @@ ADC1.EnableAnalogWatchDog2=false
 ADC1.EnableAnalogWatchDog3=false
 ADC1.EnableInjectedConversion=ENABLE
 ADC1.EnableRegularConversion=ENABLE
-ADC1.ExternalTrigConv=ADC_SOFTWARE_START
-ADC1.ExternalTrigConvEdge=ADC_EXTERNALTRIGCONVEDGE_NONE
+ADC1.ExternalTrigConv=ADC_EXTERNALTRIGCONV_T1_TRGO
+ADC1.ExternalTrigConvEdge=ADC_EXTERNALTRIGCONVEDGE_RISING
 ADC1.IPParameters=Rank-29\#ChannelRegularConversion,Channel-29\#ChannelRegularConversion,SamplingTime-29\#ChannelRegularConversion,OffsetNumber-29\#ChannelRegularConversion,Offset-29\#ChannelRegularConversion,NbrOfConversionFlag,ClockPrescaler,Resolution,DataAlign,ScanConvMode,ContinuousConvMode,DiscontinuousConvMode,DMAContinuousRequests,EOCSelection,Overrun,LowPowerAutoWait,EnableRegularConversion,NbrOfConversion,ExternalTrigConv,ExternalTrigConvEdge,EnableInjectedConversion,InjNumberOfConversion,EnableAnalogWatchDog1,EnableAnalogWatchDog2,EnableAnalogWatchDog3,master
 ADC1.InjNumberOfConversion=0
 ADC1.LowPowerAutoWait=DISABLE
@@ -27,30 +27,53 @@ ADC1.SamplingTime-29\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
 ADC1.ScanConvMode=ADC_SCAN_DISABLE
 ADC1.master=1
 ADC3.Channel-21\#ChannelRegularConversion=ADC_CHANNEL_1
-ADC3.ContinuousConvMode=ENABLE
-ADC3.DMAContinuousRequests=DISABLE
-ADC3.IPParameters=Rank-21\#ChannelRegularConversion,Channel-21\#ChannelRegularConversion,SamplingTime-21\#ChannelRegularConversion,OffsetNumber-21\#ChannelRegularConversion,Offset-21\#ChannelRegularConversion,NbrOfConversionFlag,master,ContinuousConvMode,DMAContinuousRequests
+ADC3.ContinuousConvMode=DISABLE
+ADC3.DMAContinuousRequests=ENABLE
+ADC3.ExternalTrigConv=ADC_EXTERNALTRIGCONV_T8_TRGO
+ADC3.IPParameters=Rank-21\#ChannelRegularConversion,Channel-21\#ChannelRegularConversion,SamplingTime-21\#ChannelRegularConversion,OffsetNumber-21\#ChannelRegularConversion,Offset-21\#ChannelRegularConversion,NbrOfConversionFlag,master,ContinuousConvMode,DMAContinuousRequests,ExternalTrigConv
 ADC3.NbrOfConversionFlag=1
 ADC3.Offset-21\#ChannelRegularConversion=0
 ADC3.OffsetNumber-21\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC3.Rank-21\#ChannelRegularConversion=1
 ADC3.SamplingTime-21\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
 ADC3.master=1
+Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.ADC1.0.Instance=DMA1_Channel1
+Dma.ADC1.0.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.ADC1.0.MemInc=DMA_MINC_ENABLE
+Dma.ADC1.0.Mode=DMA_NORMAL
+Dma.ADC1.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.ADC1.0.PeriphInc=DMA_PINC_DISABLE
+Dma.ADC1.0.Priority=DMA_PRIORITY_LOW
+Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.ADC3.1.Direction=DMA_PERIPH_TO_MEMORY
+Dma.ADC3.1.Instance=DMA2_Channel5
+Dma.ADC3.1.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.ADC3.1.MemInc=DMA_MINC_ENABLE
+Dma.ADC3.1.Mode=DMA_NORMAL
+Dma.ADC3.1.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.ADC3.1.PeriphInc=DMA_PINC_DISABLE
+Dma.ADC3.1.Priority=DMA_PRIORITY_LOW
+Dma.ADC3.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.Request0=ADC1
+Dma.Request1=ADC3
+Dma.RequestsNb=2
 File.Version=6
 KeepUserPlacement=false
 Mcu.Family=STM32F3
 Mcu.IP0=ADC1
 Mcu.IP1=ADC3
-Mcu.IP10=USB_DEVICE
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SYS
-Mcu.IP5=TIM1
-Mcu.IP6=TIM3
-Mcu.IP7=TIM4
-Mcu.IP8=TIM8
-Mcu.IP9=USB
-Mcu.IPNb=11
+Mcu.IP10=USB
+Mcu.IP11=USB_DEVICE
+Mcu.IP2=DMA
+Mcu.IP3=NVIC
+Mcu.IP4=RCC
+Mcu.IP5=SYS
+Mcu.IP6=TIM1
+Mcu.IP7=TIM3
+Mcu.IP8=TIM4
+Mcu.IP9=TIM8
+Mcu.IPNb=12
 Mcu.Name=STM32F303C(B-C)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13
@@ -89,6 +112,8 @@ Mcu.UserName=STM32F303CBTx
 MxCube.Version=4.23.0
 MxDb.Version=DB.4.0.230
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true
+NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.DMA2_Channel5_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:true\:true\:4\:true
 NVIC.EXTI9_5_IRQn=true\:0\:0\:false\:true\:true\:3\:true
@@ -229,7 +254,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-SystemClock_Config-RCC-false-HAL,3-MX_ADC1_Init-ADC1-false-HAL,4-MX_TIM1_Init-TIM1-false-HAL,5-MX_TIM8_Init-TIM8-false-HAL,6-MX_ADC3_Init-ADC3-false-HAL,7-MX_TIM4_Init-TIM4-false-HAL,8-MX_TIM3_Init-TIM3-false-HAL,9-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-MX_DMA_Init-DMA-false-HAL,3-SystemClock_Config-RCC-false-HAL,4-MX_ADC1_Init-ADC1-false-HAL,5-MX_TIM1_Init-TIM1-false-HAL,6-MX_TIM8_Init-TIM8-false-HAL,7-MX_ADC3_Init-ADC3-false-HAL,8-MX_TIM4_Init-TIM4-false-HAL,9-MX_TIM3_Init-TIM3-false-HAL,10-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL
 RCC.ADC12outputFreq_Value=48000000
 RCC.ADC34outputFreq_Value=48000000
 RCC.AHBFreq_Value=48000000
