--- a/EclipseStm32.ioc
+++ b/EclipseStm32.ioc
@@ -39,19 +39,19 @@ ADC3.SamplingTime-21\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
 ADC3.master=1
 Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.ADC1.0.Instance=DMA1_Channel1
-Dma.ADC1.0.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.ADC1.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
 Dma.ADC1.0.MemInc=DMA_MINC_ENABLE
 Dma.ADC1.0.Mode=DMA_NORMAL
-Dma.ADC1.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.ADC1.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
 Dma.ADC1.0.PeriphInc=DMA_PINC_DISABLE
 Dma.ADC1.0.Priority=DMA_PRIORITY_LOW
 Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 Dma.ADC3.1.Direction=DMA_PERIPH_TO_MEMORY
 Dma.ADC3.1.Instance=DMA2_Channel5
-Dma.ADC3.1.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.ADC3.1.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
 Dma.ADC3.1.MemInc=DMA_MINC_ENABLE
 Dma.ADC3.1.Mode=DMA_NORMAL
-Dma.ADC3.1.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.ADC3.1.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
 Dma.ADC3.1.PeriphInc=DMA_PINC_DISABLE
 Dma.ADC3.1.Priority=DMA_PRIORITY_LOW
 Dma.ADC3.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
@@ -63,17 +63,18 @@ KeepUserPlacement=false
 Mcu.Family=STM32F3
 Mcu.IP0=ADC1
 Mcu.IP1=ADC3
-Mcu.IP10=USB
-Mcu.IP11=USB_DEVICE
+Mcu.IP10=TIM8
+Mcu.IP11=USB
+Mcu.IP12=USB_DEVICE
 Mcu.IP2=DMA
-Mcu.IP3=NVIC
-Mcu.IP4=RCC
-Mcu.IP5=SYS
-Mcu.IP6=TIM1
-Mcu.IP7=TIM3
-Mcu.IP8=TIM4
-Mcu.IP9=TIM8
-Mcu.IPNb=12
+Mcu.IP3=I2C1
+Mcu.IP4=NVIC
+Mcu.IP5=RCC
+Mcu.IP6=SYS
+Mcu.IP7=TIM1
+Mcu.IP8=TIM3
+Mcu.IP9=TIM4
+Mcu.IPNb=13
 Mcu.Name=STM32F303C(B-C)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13
@@ -210,8 +211,10 @@ PB7.GPIO_Label=ENC1
 PB7.GPIO_PuPd=GPIO_PULLUP
 PB7.Signal=S_TIM4_CH2
 PB8.Locked=true
+PB8.Mode=I2C
 PB8.Signal=I2C1_SCL
 PB9.Locked=true
+PB9.Mode=I2C
 PB9.Signal=I2C1_SDA
 PC13.GPIOParameters=GPIO_Label
 PC13.GPIO_Label=PWM1
@@ -254,7 +257,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-MX_DMA_Init-DMA-false-HAL,3-SystemClock_Config-RCC-false-HAL,4-MX_ADC1_Init-ADC1-false-HAL,5-MX_TIM1_Init-TIM1-false-HAL,6-MX_TIM8_Init-TIM8-false-HAL,7-MX_ADC3_Init-ADC3-false-HAL,8-MX_TIM4_Init-TIM4-false-HAL,9-MX_TIM3_Init-TIM3-false-HAL,10-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-MX_DMA_Init-DMA-false-HAL,3-SystemClock_Config-RCC-false-HAL,4-MX_ADC1_Init-ADC1-false-HAL,5-MX_TIM1_Init-TIM1-false-HAL,6-MX_TIM8_Init-TIM8-false-HAL,7-MX_ADC3_Init-ADC3-false-HAL,8-MX_TIM4_Init-TIM4-false-HAL,9-MX_TIM3_Init-TIM3-false-HAL,10-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL,11-MX_I2C1_Init-I2C1-false-HAL
 RCC.ADC12outputFreq_Value=48000000
 RCC.ADC34outputFreq_Value=48000000
 RCC.AHBFreq_Value=48000000
@@ -307,7 +310,7 @@ SH.S_TIM4_CH2.ConfNb=1
 TIM1.Channel-PWM\ Generation1\ CH1N=TIM_CHANNEL_1
 TIM1.Channel-PWM\ Generation2\ CH2N=TIM_CHANNEL_2
 TIM1.CounterMode=TIM_COUNTERMODE_CENTERALIGNED1
-TIM1.IPParameters=Channel-PWM Generation2 CH2N,OCNIdleState_2,OCNIdleState_1,Pulse-PWM Generation1 CH1N,Pulse-PWM Generation2 CH2N,Period,OCFastMode_PWM-PWM Generation1 CH1N,OCFastMode_PWM-PWM Generation2 CH2N,CounterMode,Channel-PWM Generation1 CH1N
+TIM1.IPParameters=Channel-PWM Generation2 CH2N,OCNIdleState_2,OCNIdleState_1,Pulse-PWM Generation1 CH1N,Pulse-PWM Generation2 CH2N,Period,OCFastMode_PWM-PWM Generation1 CH1N,OCFastMode_PWM-PWM Generation2 CH2N,CounterMode,Channel-PWM Generation1 CH1N,TIM_MasterOutputTrigger,TIM_MasterSlaveMode
 TIM1.OCFastMode_PWM-PWM\ Generation1\ CH1N=TIM_OCFAST_ENABLE
 TIM1.OCFastMode_PWM-PWM\ Generation2\ CH2N=TIM_OCFAST_ENABLE
 TIM1.OCNIdleState_1=TIM_OCNIDLESTATE_SET
@@ -315,6 +318,8 @@ TIM1.OCNIdleState_2=TIM_OCNIDLESTATE_SET
 TIM1.Period=2400
 TIM1.Pulse-PWM\ Generation1\ CH1N=10
 TIM1.Pulse-PWM\ Generation2\ CH2N=10
+TIM1.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
+TIM1.TIM_MasterSlaveMode=TIM_MASTERSLAVEMODE_ENABLE
 TIM3.EncoderMode=TIM_ENCODERMODE_TI12
 TIM3.IC1Filter=5
 TIM3.IC1Polarity=TIM_ICPOLARITY_BOTHEDGE
@@ -332,7 +337,7 @@ TIM4.Period=16
 TIM8.Channel-PWM\ Generation1\ CH1N=TIM_CHANNEL_1
 TIM8.Channel-PWM\ Generation2\ CH2N=TIM_CHANNEL_2
 TIM8.CounterMode=TIM_COUNTERMODE_CENTERALIGNED1
-TIM8.IPParameters=Channel-PWM Generation2 CH2N,OCNIdleState_1,OCNIdleState_2,Pulse-PWM Generation1 CH1N,Pulse-PWM Generation2 CH2N,Period,OCFastMode_PWM-PWM Generation2 CH2N,OCFastMode_PWM-PWM Generation1 CH1N,CounterMode,Channel-PWM Generation1 CH1N
+TIM8.IPParameters=Channel-PWM Generation2 CH2N,OCNIdleState_1,OCNIdleState_2,Pulse-PWM Generation1 CH1N,Pulse-PWM Generation2 CH2N,Period,OCFastMode_PWM-PWM Generation2 CH2N,OCFastMode_PWM-PWM Generation1 CH1N,CounterMode,Channel-PWM Generation1 CH1N,TIM_MasterOutputTrigger,TIM_MasterSlaveMode
 TIM8.OCFastMode_PWM-PWM\ Generation1\ CH1N=TIM_OCFAST_ENABLE
 TIM8.OCFastMode_PWM-PWM\ Generation2\ CH2N=TIM_OCFAST_ENABLE
 TIM8.OCNIdleState_1=TIM_OCNIDLESTATE_SET
@@ -340,6 +345,8 @@ TIM8.OCNIdleState_2=TIM_OCNIDLESTATE_SET
 TIM8.Period=2400
 TIM8.Pulse-PWM\ Generation1\ CH1N=10
 TIM8.Pulse-PWM\ Generation2\ CH2N=10
+TIM8.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
+TIM8.TIM_MasterSlaveMode=TIM_MASTERSLAVEMODE_ENABLE
 USB_DEVICE.CLASS_NAME_FS=CDC
 USB_DEVICE.IPParameters=VirtualModeFS,CLASS_NAME_FS,VirtualMode
 USB_DEVICE.VirtualMode=Cdc
